--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://192.168.1.186:8080",
   "browserslist": {
     "production": [
       ">0.2%",
