--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://192.168.1.186:8080",
+  "proxy": "http://sos.axelor.com:8080",
   "browserslist": {
     "production": [
       ">0.2%",
